# artist

./: .gitignore  .gitmodules  CMakeLists.txt  readme.txt  vcpkg.json
cmake/: CompileOptions.cmake  FindSkia.cmake
docs/manual/: CMakeLists.txt
examples/: CMakeLists.txt
lib/: CMakeLists.txt
source/: CMakeLists.txt
source/artist/: CMakeLists.txt
source/artist/host/macos/: skia_app.mm
source/artist/host/windows/: skia_app.cpp
source/artist/impl/skia/: canvas.cpp  font.cpp  image.cpp  opaque.hpp  path.cpp  text_layout.cpp
source/artist/impl/skia/detail/: harfbuzz.cpp  harfbuzz.hpp
source/artist/include/: common_definitions.hpp
source/artist/include/artist/: path.hpp
source/artist/src/artist/: svg_path.cpp
source/baselib/: CMakeLists.txt
source/baselib/source/: baselib.cpp
source/fiblib/: CMakeLists.txt
source/mytest/: CMakeLists.txt
source/mytest/src/: HelloWorld.cpp  main.cpp
source/tests/: CMakeLists.txt
